# workflow-orchestration-queue-uniform39

./: .ai-repository-summary.md  .env.example  AGENTS.md  Dockerfile.notifier  Dockerfile.sentinel  README.md  docker-compose.yml  pyproject.toml  run_opencode_prompt.sh
.devcontainer/: devcontainer.json
.github/.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml  validate.yml
.github/workflows/prompts/: orchestrator-agent-prompt.md
.opencode/: package.json
.qwen/: settings.json
debrief-and-document/: report.md  trace.md
docs/validation/: VALIDATION_REPORT_create-agents-md-file_20260319.md  VALIDATION_REPORT_debrief-and-document_20260319.md  progress-report-final.md
local_ai_instruction_modules/: ai-development-instructions.md
plan_docs/: OS-APOW Architecture Guide v3.md  OS-APOW Development Plan v4.md  OS-APOW Implementation Specification v1.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
scripts/: devcontainer-opencode.sh
src/: __init__.py  interfaces.py  models.py
src/notifier/: __init__.py  notifier_service.py
src/sentinel/: __init__.py  orchestrator_sentinel.py
test/: test-opencode-run.sh
tests/: test_models.py  test_notifier.py  test_sentinel.py
