[project]
name = "workflow-orchestration-queue"
version = "0.1.0"
description = "Headless agentic orchestration platform — transforms GitHub Issues into autonomous AI execution orders"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.31",
    "pydantic>=2.9",
    "httpx>=0.27",
    "pyjwt>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "httpx>=0.27",
]

[project.scripts]
sentinel = "src.sentinel.orchestrator_sentinel:main"
notifier = "src.notifier.notifier_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel", "src/notifier", "src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
